// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Attending Button Basic tests 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 30px;
  box-shadow: inset 0 0px 28px rgba(0,0,0,0.25),inset 0 0px 10px rgba(0,0,0,0.22);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 60px;
  margin-left: 15px;
  margin-right: 15px;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  height: 54px;
  width: 54px;
  background-color: #ffffff;
  border-radius: 50%;
  display: inline-block;
  z-index: 1;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 60px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: normal;
  font-size: 20px;
  white-space: nowrap;
  text-align: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        style="overflow: visible; height: 0px; width: 0px;"
      >
        <div
          class="c2"
          style="height: 0px; width: 0px;"
        >
          <div
            class="c3"
            style="height: 0px; width: 0px; background-color: rgb(71, 37, 165);"
          >
            <div
              class="c4"
            />
            <div
              class="c5"
              style="transform: none;"
            />
            <div
              class="c4"
            />
            <span
              class="c6"
            />
            <div
              class="c4"
            />
            <div
              class="c5"
              style="transform: none;"
            />
            <div
              class="c4"
            />
          </div>
          <div
            class="c7 AttendingHandle"
            style="transform: translateX(-27px) translateZ(0);"
          />
        </div>
      </div>
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Attending Button Test here 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 30px;
  box-shadow: inset 0 0px 28px rgba(0,0,0,0.25),inset 0 0px 10px rgba(0,0,0,0.22);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 60px;
  margin-left: 15px;
  margin-right: 15px;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  height: 54px;
  width: 54px;
  background-color: #ffffff;
  border-radius: 50%;
  display: inline-block;
  z-index: 1;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 60px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: normal;
  font-size: 20px;
  white-space: nowrap;
  text-align: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        style="overflow: visible; height: 0px; width: 0px;"
      >
        <div
          class="c2"
          style="height: 0px; width: 0px;"
        >
          <div
            class="c3"
            style="height: 0px; width: 0px; background-color: rgb(34, 181, 115);"
          >
            <div
              class="c4"
            />
            <div
              class="c5"
              style="transform: scale(0) translateZ(0);"
            />
            <div
              class="c4"
            />
            <span
              class="c6"
            >
              Attending
            </span>
            <div
              class="c4"
            />
            <div
              class="c5"
              style="transform: scale(0) translateZ(0);"
            />
            <div
              class="c4"
            />
          </div>
          <div
            class="c7 AttendingHandle"
            style="transform: translateX(-57px) translateZ(0);"
          />
        </div>
      </div>
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Attending Button Test missing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 30px;
  box-shadow: inset 0 0px 28px rgba(0,0,0,0.25),inset 0 0px 10px rgba(0,0,0,0.22);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 60px;
  margin-left: 15px;
  margin-right: 15px;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  height: 54px;
  width: 54px;
  background-color: #ffffff;
  border-radius: 50%;
  display: inline-block;
  z-index: 1;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 60px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: normal;
  font-size: 20px;
  white-space: nowrap;
  text-align: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        style="overflow: visible; height: 0px; width: 0px;"
      >
        <div
          class="c2"
          style="height: 0px; width: 0px;"
        >
          <div
            class="c3"
            style="height: 0px; width: 0px;"
          >
            <div
              class="c4"
            />
            <div
              class="c5"
              style="transform: scale(0) translateZ(0);"
            />
            <div
              class="c4"
            />
            <span
              class="c6"
            />
            <div
              class="c4"
            />
            <div
              class="c5"
              style="transform: scale(0) translateZ(0);"
            />
            <div
              class="c4"
            />
          </div>
          <div
            class="c7 AttendingHandle"
          />
        </div>
      </div>
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
  </div>
</div>
`;
